Update future info

--- a/index.html
+++ b/index.html
@@ -145,8 +145,13 @@
   <section id="future" class="wrapper two-col align-center">
     <div>
       <h2>what’s next?</h2>
-      <p>publishing three papers → vlms, intra‑op analytics & cornea segmentation.</p><br>
-      <p>hunting for audacious startup problems — let’s chat.</p>
+      <p>working on three papers, planning on publishing soon</p>
+      <ul class="bullets">
+        <li>auto cornea seg in cataract vids w/ pspnet</li>
+        <li>multimodal op analysis to prevent pco</li>
+        <li>vlm fine-tuning for eye surgeries</li>
+      </ul>
+      <p>hunting for innovative startups / labs — let’s chat.</p>
     </div>
     <img class="future-img" src="images/future.jpg" alt="">
   </section>
