--- a/index.html
+++ b/index.html
@@ -47,8 +47,12 @@
       <h1>prabhdeep singh</h1>
       <h2 id="age-title">ai researcher</h2>
     </div>
-  </section>
 
+    <!-- scroll cue -->
+    <div id="scrollDown" class="scroll-down">
+      <i class="fa-solid fa-chevron-down"></i>
+    </div>
+  </section>
   <!-- ===== about ===== -->
   <section id="about" class="wrapper two-col">
     <div>
